syntax = "proto3";

package pb;

option go_package = "github.com/imagvfx/coco/pb";

service Worker {
	rpc Ping(PingRequest) returns (PingResponse) {};
	rpc Run(RunRequest) returns (RunResponse) {};
	rpc Cancel(CancelRequest) returns (CancelResponse) {};
}

message PingRequest {}

message PingResponse {
	string task_id = 1;
}

message Command {
	repeated string args = 1;
}

message RunRequest {
	string id = 1;
	repeated Command cmds = 2;
}

message RunResponse {}

message CancelRequest {
	string id = 1;
}

message CancelResponse {}

service Farm {
	rpc Ready(ReadyRequest) returns (ReadyResponse) {};
	rpc Bye(ByeRequest) returns (ByeResponse) {};
	rpc Done(DoneRequest) returns (DoneResponse) {};
	rpc Failed(FailedRequest) returns (FailedResponse) {};
}

message ReadyRequest {
	string addr = 1;
}

message ReadyResponse {}

message ByeRequest {
	string addr = 1;
}

message ByeResponse {}

message DoneRequest{
	string addr = 1;
	string task_id = 2;
}

message DoneResponse {}

message FailedRequest{
	string addr = 1;
	string task_id = 2;
}

message FailedResponse {}


